# homelab-cluster

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  README.md  bootstrap-cluster.sh  bootstrap.sh  deploy-whoami-priv.sh  env.example  helm-install-traefik-priv.sh  helmfile.yaml.gotmpl  install-helm-charts.sh  prek.toml  refresh-kube-config.py  substack-writeup-short.md  substack-writeup.md  traefik-ingress-options.md  wipe-cluster.sh
.ai/: ai-context.md  ai-rules.md  index.yaml
.ai/docs/: FILE_HEADER_STANDARDS.md  ROADMAP_WORKFLOW.md
.ai/howto/: how-to-add-audiobooks-to-audiobookshelf.md  how-to-add-videos-to-jellyfin.md  how-to-bootstrap-the-cluster.md  how-to-capture-screenshots-for-docs.md  how-to-connect-audiobookshelf-from-ios.md  how-to-continue-feature-work.md  how-to-create-a-pr.md  how-to-create-tailscale-ci-oauth.md  how-to-deploy-a-new-app.md  how-to-plan-a-feature.md  how-to-troubleshoot-kubernetes.md  how-to-update-progress.md
.ai/templates/: feature-ai-context.md.template  feature-milestone-breakdown.md.template  feature-progress-tracker.md.template  pr-body.md.template
.github/workflows/: ci.yml  helmfile-deploy.yml  helmfile-diff.yml
_mlops-club/: ansible.cfg  hosts.ini
_mlops-club/group_vars/: all.yml
apps/audiobookshelf/: deploy.sh  manifest.yaml
apps/come-follow-me-app/: deploy.sh  manifest.yaml
apps/immich/: deploy.sh  manifest.yaml
apps/jellyfin/: deploy.sh  init-nas.yaml  manifest.yaml
apps/kitaru/: ARTIFACTS.md  README.md  deploy.sh  manifest.yaml  values.yaml
apps/loseit-agent/: ARCHITECTURE.md  Dockerfile  README.md  SPEC.md  deploy.sh  manifest.yaml  server.py  smoke-test.sh
apps/loseit-agent2/: Dockerfile  deploy.sh  manifest.yaml  pyproject.toml
apps/loseit-agent2/src/loseit_agent/: __init__.py  agent.py  service.py
apps/loseit-kitaru-workflow/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/loseit-kitaru-workflow/src/loseit_kitaru_workflow/: __init__.py  flow.py
apps/loseit-openwebui-agent/: Dockerfile  README.md  deploy.sh  manifest.yaml  pyproject.toml
apps/loseit-openwebui-agent/src/loseit_openwebui_agent/: __init__.py  service.py
apps/loseit-openwebui-pipe/: README.md  install.sh  openwebui_pipe.py
apps/minio/: README.md  deploy.sh  manifest.yaml
apps/navidrome/: deploy.sh  init-nas.yaml  manifest.yaml
apps/ollama/: README.md  deploy.sh  manifest.yaml  values.yaml
apps/open-webui/: README.md  deploy.sh  manifest.yaml  values.yaml
apps/seminary-feedback/: deploy.sh  manifest.yaml
archived/: README.md  diagnose_whoami.sh
archived/_mlops-club/: run  (+1 more)
aws/: infra.py  run  template.yaml
benchmarks/: EXPERIMENT_DESIGN.md  README.md
docs/: K3s.md
gpu-operator/: README.md  values.yaml
image-registry/: helm-install.sh  values.yaml
k3s-ansible/: .pre-commit-config.yaml  README.md  ansible.cfg  inventory.yaml  pyproject.toml  requirements.txt  run
k3s-ansible/docs/: ansible.md
k3s-ansible/inventory/cluster/: hosts.ini
k3s-ansible/inventory/cluster/group_vars/: all.yml
k3s-ansible/playbooks/: ping-hosts.yaml  site.yaml  system-info.yaml  test.yaml
k3s-ansible/roles/k3s_agent/tasks/: main.yaml
k3s-ansible/roles/k3s_server/tasks/: main.yaml
network/: cleanup-all.sh  helm-install-all.sh
nginx-deployment/: CLOUDFLARE_TUNNEL_SETUP.md  deploy-all.sh  manifest-internal-https.yaml  manifest-internal-tailscale-cloudflare.yaml  manifest-internal-tailscale.yaml  manifest-public-cloudflare-traefik.yaml  manifest-public-cloudflare.yaml  traefik-priv-values.yaml  traefik-pub-values.yaml
otel-operator/: README.md  collector.yaml  values.yaml
prompts/: private-traefik.md  research-4-architectures.md
storage/: README.md
whoami-deployment/: tailscale-traefik-internal.yaml
(+84 files in other folders)
