[project]
name = "loseit-agent"
version = "0.1.0"
description = "FastAPI service exposing a pydantic-ai agent that drives the loseit CLI."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]>=0.35,<0.40",
  "httpx>=0.28,<0.29",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "pydantic-ai-slim[openai]>=1.89,<1.104",
  "kitaru[pydantic-ai]==0.15.0",
  "lose-it @ git+https://github.com/phitoduck/lose-it@main",
  "s3fs>2022.3.0,!=2025.3.1",
  "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loseit_agent"]

[project.scripts]
loseit-agent = "loseit_agent.service:main"
