[project]
name = "loseit-kitaru-workflow"
version = "0.1.0"
description = "Pydantic-AI agent deployed as a Kitaru flow that drives the loseit CLI."
requires-python = ">=3.12"
dependencies = [
  "kitaru[pydantic-ai]==0.15.0",
  "pydantic-ai-slim[openai]>=1.89,<1.104",
  "lose-it @ git+https://github.com/phitoduck/lose-it@main",
  "s3fs>2022.3.0,!=2025.3.1",
  "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loseit_kitaru_workflow"]
