[project]
name = "loseit-openwebui-agent"
version = "0.1.0"
description = "FastAPI gateway: Open WebUI Pipe ↔ Kitaru deployed flow."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]>=0.35,<0.40",
  "httpx>=0.28,<0.29",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "kitaru>=0.15.0,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
loseit-openwebui-agent = "loseit_openwebui_agent.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loseit_openwebui_agent"]
