[project]
name = "loseit-openwebui-agent"
version = "0.1.0"
description = "FastAPI gateway: Open WebUI Pipe ↔ Kitaru deployed flow."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]>=0.35,<0.40",
  "httpx>=0.28,<0.29",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "kitaru>=0.15.0,<0.16",
  # Required so Kitaru can hydrate artifacts from the MinIO artifact store
  # when we read tool_args / model_request output during polling.
  "s3fs>2022.3.0,!=2025.3.1",
  "boto3",
  "aws-profile-manager",
  # Needed because Kitaru pickled the workflow pod's pydantic_ai.messages.ModelResponse
  # into the model_request output artifact. Without this dep the gateway can read
  # the artifact bytes but cannot reconstitute the class, so reasoning frames go blank.
  "pydantic-ai-slim>=1.89,<1.104",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
loseit-openwebui-agent = "loseit_openwebui_agent.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loseit_openwebui_agent"]
